--- a/resume.html
+++ b/resume.html
@@ -40,6 +40,7 @@
         <div gradient-cursor class="invisible sm:visible fixed gradient-cursor"></div>
         <div class="h-[100vh]">
             <div class="flex flex-row-reverse h-full w-full">
+                <div sidemenu-backdrop class="fixed inset-0 bg-black opacity-80 z-30 hidden lg:hidden cursor-pointer"></div>
                 <div sidemenu class="flex-shrink-0 overflow-x-hidden bg-brown-darker z-50 invisible" style="width: 0px;">
                     <div class="h-full w-[280px]">
                         <div class="flex h-full min-h-0 flex-col">
