--- a/index.html
+++ b/index.html
@@ -154,22 +154,25 @@
                     <div class="z-10 flex flex-col overflow-scroll relative h-full">
                         <div id="main" class="py-5 px-6 flex-1">
                             <div class="flex flex-col gap-2">
-                                <div class="p-10 bg-brown-darker rounded-xl h-min flex flex-col lg:flex-row">
-                                    <div class="flex flex-col flex-1 items-center lg:items-start">
-                                        <h1 popup fast class="text-8xl font-nunitoblack font-black leading-tight tracking-tight">Welcome</h1>
-                                        <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center lg:items-start">This is my personal website, designed and curated by me to serve as the hub for everything related to me. This includes my resume, certifications, and education, as well as my personal blogs and other miscellaneous content.</span>    
-                                    </div>
-                                    <div class="flex flex-row justify-center items-center mt-10 lg:mt-0 select-none">
-                                        <div class="bg-brown-dark p-[1px] h-full mx-12 hidden lg:block transition-all"></div>
-                                        <div class="flex flex-col flex-2 items-center justify-center">
-                                            <h1 id="totalFollowers" popup moderate class="text-8xl font-nunitoblack font-black leading-tight tracking-tight">0</h1>
-                                            <span popup fast class="flex flex-row gap-x-2 flex-wrap">Total Followers</span>    
+                                <div class="flex flex-col lg:flex-row gap-2 w-full">
+                                    <div class="p-10 bg-brown-darker rounded-xl flex flex-col lg:flex-row w-full flex-1">
+                                        <div class="flex flex-col flex-1 items-center lg:items-start">
+                                            <h1 popup fast class="text-6xl md:text-8xl font-nunitoblack font-black leading-tight tracking-tight">Welcome</h1>
+                                            <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center text-center lg:text-left lg:justify-start items-center lg:items-start">This is my personal website, designed and curated by me to serve as the hub for everything related to me. This includes my resume, certifications, and education, as well as my personal blogs and other miscellaneous content.</span>    
                                         </div>
-                                        <div class="bg-brown-dark p-[1px] h-[192px] mx-12 block lg:hidden transition-all"></div>
-                                        <div class="bg-brown-dark p-[1px] h-full mx-12 hidden lg:block transition-all"></div>
-                                        <div class="flex flex-col flex-2 items-center justify-center">
-                                            <h1 id="totalRepos" popup moderate class="text-8xl font-nunitoblack font-black leading-tight tracking-tight">0</h1>
-                                            <span popup fast class="flex flex-row gap-x-2 flex-wrap">Total Repositorys</span>    
+                                    </div>
+                                    <div class="flex flex-col sm:flex-row gap-2 flex-3">
+                                        <div class="p-10 bg-brown-darker rounded-xl flex flex-col lg:flex-row h-full w-full">
+                                            <div class="flex flex-col flex-2 items-center justify-center">
+                                                <h1 id="totalFollowers" popup moderate class="text-6xl md:text-8xl font-nunitoblack font-black leading-tight tracking-tight">0</h1>
+                                                <span popup fast class="flex flex-row gap-x-2">Total Followers</span>    
+                                            </div>
+                                        </div>
+                                        <div class="p-10 bg-brown-darker rounded-xl flex flex-col lg:flex-row h-full w-full">
+                                            <div class="flex flex-col flex-2 items-center justify-center">
+                                                <h1 id="totalRepos" popup moderate class="text-6xl md:text-8xl font-nunitoblack font-black leading-tight tracking-tight">0</h1>
+                                                <span popup fast class="flex flex-row gap-x-2">Total Repositorys</span>    
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -178,7 +181,7 @@
                                         <div class="p-10 bg-brown-darker rounded-xl flex-1">
                                             <div class="flex flex-col flex-1 h-fit items-center lg:items-start">
                                                 <h1 popup fast class="flex flex-row gap-x-3 flex-wrap text-5xl font-nunitoblack font-black leading-tight tracking-tight">Learn about me</h1>
-                                                <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center lg:items-start">Curious about who I am, and what I do? Select one of the options below to get started.</span>    
+                                                <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start text-center lg:text-left  items-center lg:items-start">Curious about who I am, and what I do? Select one of the options below to get started.</span>    
                                             </div>                                  
                                         </div>
                                         <div class="flex flex-col lg:flex-row justify-between gap-2 select-none">
@@ -203,7 +206,7 @@
                                         <div class="p-10 bg-brown-darker rounded-xl flex-1">
                                             <div class="flex flex-col flex-1 items-center lg:items-start">
                                                 <h1 popup fast class="flex flex-row gap-x-3 flex-wrap text-5xl font-nunitoblack font-black leading-tight tracking-tight">Check out my blogs</h1>
-                                                <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center lg:items-start">Want to know what I'm curious about? Check out some of my blogs to see what I like.</span>        
+                                                <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center text-center lg:text-left  lg:items-start">Want to know what I'm curious about? Check out some of my blogs to see what I like.</span>        
                                             </div>
                                         </div>
                                         <div class="p-10 bg-brown-darker rounded-xl flex-1">
@@ -218,11 +221,11 @@
                                 <div class="flex flex-col gap-2">
                                     <div class="flex flex-col-reverse lg:flex-row items-center p-10 bg-brown-darker rounded-xl">
                                         <div id="who-am-i" class="w-full">
-                                            <h1 popup fast class="flex flex-row gap-x-3 flex-wrap text-8xl font-nunitoblack font-black leading-tight tracking-tight justify-center lg:justify-start items-center lg:items-start invisible">Who am I?</h1>
-                                            <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center lg:items-start invisible">My name is Braden, also known as Wo-r or BrandyBeers online. I'm a self taught programmer with over 4 years of experience, coding a wide range of things from simple javascript websites to fully developed websites with php, apis, backends, and even sql. I do pretty much anything I set my mind too, so even if its something I've never tried before, I will keep going at it until I get it right, or get it to at least function the way I intended. I love programming, to the point that its probably unhealthy, but hey, its fun at least.</span>
+                                            <h1 popup fast class="flex flex-row gap-x-3 flex-wrap text-6xl md:text-8xl font-nunitoblack font-black leading-tight tracking-tight justify-center lg:justify-start items-center lg:items-start invisible">Who am I?</h1>
+                                            <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center lg:items-start text-center lg:text-left  invisible">My name is Braden, also known as Wo-r or BrandyBeers online. I'm a self taught programmer with over 4 years of experience, coding a wide range of things from simple javascript websites to fully developed websites with php, apis, backends, and even sql. I do pretty much anything I set my mind too, so even if its something I've never tried before, I will keep going at it until I get it right, or get it to at least function the way I intended. I love programming, to the point that its probably unhealthy, but hey, its fun at least.</span>
                                         </div>
                                         <div class="bg-brown-dark p-[1px] h-[5px] w-[192px] lg:w-0  lg:h-[192px] my-12 lg:mx-12 transition-all"></div>
-                                        <img tooltip="A picture of me from senior year of high school" class="w-[400px] h-[400px] lg:w-[300px] lg:h-[300px] rounded-xl shadow-xl" src="./src/logo/portrait.png">
+                                        <img tooltip="A picture of me from senior year of high school" class="w-[300px] h-[300px] md:w-[400px] md:h-[400px] lg:w-[300px] lg:h-[300px] rounded-xl shadow-xl" src="./src/logo/portrait.png">
                                     </div>
                                     <div class="flex flex-row flex-wrap w-full gap-2">
                                         <a goto="" tooltip="View or download my resume here" class="cursor-pointer flex-1 text-center select-none">
@@ -259,8 +262,8 @@
                             <div class="flex flex-row flex-wrap gap-2 mt-2">
                                 <div class="flex flex-col p-10 bg-brown-darker rounded-xl flex-1">
                                     <div id="best-projects">
-                                        <h1 popup fast class="flex flex-row gap-x-3 flex-wrap text-8xl font-nunitoblack font-black leading-tight tracking-tight justify-center lg:justify-start items-center lg:items-start invisible">Best Projects</h1>
-                                        <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center lg:items-start invisible">These specific projects are by far the best I've made, in quality, and functionality. They simply out match what most others are capable of in high school.</span>
+                                        <h1 popup fast class="flex flex-row gap-x-3 flex-wrap text-6xl md:text-8xl font-nunitoblack font-black leading-tight tracking-tight justify-center lg:justify-start items-center lg:items-start invisible">Best Projects</h1>
+                                        <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center lg:items-start text-center lg:text-left  invisible">These specific projects are by far the best I've made, in quality, and functionality. They simply out match what most others are capable of in high school.</span>
                                     </div>
                                 </div>
                                 <div id="bestRepos" class="flex flex-row flex-wrap gap-2 flex-1"></div>
@@ -268,8 +271,8 @@
                             <div class="flex flex-row flex-wrap gap-2 mt-2">
                                 <div class="flex flex-col p-10 bg-brown-darker rounded-xl flex-1">
                                     <div id="languages">
-                                        <h1 popup fast class="flex flex-row gap-x-3 flex-wrap text-8xl font-nunitoblack font-black leading-tight tracking-tight justify-center lg:justify-start items-center lg:items-start invisible">Languages</h1>
-                                        <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center lg:items-start invisible">My most used programming languages, followed by other languages I may have used for a while or just dabbled in.</span>
+                                        <h1 popup fast class="flex flex-row gap-x-3 flex-wrap text-6xl md:text-8xl font-nunitoblack font-black leading-tight tracking-tight justify-center lg:justify-start items-center lg:items-start invisible">Languages</h1>
+                                        <span popup extremelyFast class="flex flex-row gap-x-1 flex-wrap justify-center lg:justify-start items-center lg:items-start text-center lg:text-left  invisible">My most used programming languages, followed by other languages I may have used for a while or just dabbled in.</span>
                                     </div>
                                 </div>
                                 <a class="flex-1 text-center select-none" tooltip="JavaScript is a versatile, high-level programming language commonly used for web development.">
