--- a/index.html
+++ b/index.html
@@ -350,7 +350,27 @@
                         
 
                         <div class="bg-brown-darker select-none flex-2">
-                            <div class="py-5 px-6 w-full">Footer</div>
+                            <div class="py-5 px-6 w-full">
+                                <div class="flex justify-between items-center">
+                                    <div class="flex flex-1">Copyright &copy; Wo-r 2019-<span id="currentYear"></span></div>
+                                    <div class="flex flex-row gap-2 flex-2">
+                                        <a goto="" tooltip="View my LinkedIn page to get a true full view of all my achievements" class="cursor-pointer" disabled>
+                                            <div ripple class="relative overflow-hidden hover:bg-brown-light hover:shadow-xl hover:bg-opacity-20 transition rounded-xl z-20">
+                                                <svg class="p-2 pt-[3px]" viewbox="0 0 30 25" width="45px" height="45px">    
+                                                    <path class="fill-gray-300 pointer-events-none" d="M24,4H6C4.895,4,4,4.895,4,6v18c0,1.105,0.895,2,2,2h18c1.105,0,2-0.895,2-2V6C26,4.895,25.105,4,24,4z M10.954,22h-2.95 v-9.492h2.95V22z M9.449,11.151c-0.951,0-1.72-0.771-1.72-1.72c0-0.949,0.77-1.719,1.72-1.719c0.948,0,1.719,0.771,1.719,1.719 C11.168,10.38,10.397,11.151,9.449,11.151z M22.004,22h-2.948v-4.616c0-1.101-0.02-2.517-1.533-2.517 c-1.535,0-1.771,1.199-1.771,2.437V22h-2.948v-9.492h2.83v1.297h0.04c0.394-0.746,1.356-1.533,2.791-1.533 c2.987,0,3.539,1.966,3.539,4.522V22z">
+                                                </svg>
+                                            </div>
+                                        </a>
+                                        <a goto="https://www.youtube.com/@thatguywoods" tooltip="Check out my youtube channel where I make videos" class="cursor-pointer">
+                                            <div ripple class="relative overflow-hidden hover:bg-brown-light hover:shadow-xl hover:bg-opacity-20 transition rounded-xl z-20">
+                                                <svg class="p-2 pt-[3px]" viewbox="0 0 50 45" width="45px" height="45px">    
+                                                    <path class="fill-gray-300 pointer-events-none" d="M 44.898438 14.5 C 44.5 12.300781 42.601563 10.699219 40.398438 10.199219 C 37.101563 9.5 31 9 24.398438 9 C 17.800781 9 11.601563 9.5 8.300781 10.199219 C 6.101563 10.699219 4.199219 12.199219 3.800781 14.5 C 3.398438 17 3 20.5 3 25 C 3 29.5 3.398438 33 3.898438 35.5 C 4.300781 37.699219 6.199219 39.300781 8.398438 39.800781 C 11.898438 40.5 17.898438 41 24.5 41 C 31.101563 41 37.101563 40.5 40.601563 39.800781 C 42.800781 39.300781 44.699219 37.800781 45.101563 35.5 C 45.5 33 46 29.398438 46.101563 25 C 45.898438 20.5 45.398438 17 44.898438 14.5 Z M 19 32 L 19 18 L 31.199219 25 Z">
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
